--- a/scss/_comparison.scss
+++ b/scss/_comparison.scss
@@ -9,6 +9,7 @@
 
 .comparison-in-our-app-header {
   background-color: darken($pirate-yellow, 10%);
+  transform: scale(1, 1.05);
 }
 
 .comparison-in-our-app-header-h {
